--- a/styles.css
+++ b/styles.css
@@ -127,16 +127,28 @@ z-index: 1500;
    
 }
 .tileStyle {
+    position: relative;
     z-index: 100;
     border-radius: 5px;
-    background-image: url(./img/frame\ 6\ dark.jpg) ;
+    background-image: url(./img/darker\ frame.jpg) ;
+    background-repeat: no-repeat;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-    
     border: 2px black solid;
 
 }
+.dynamic-tile-style {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 243.33px;
+    height: 243.33px;
+    border-radius: 5px;
+    outline: 2px black solid;
+    
+}
 .color {
-    background-image: url(./img/autumn\ 17.png);
+    background-image: url();
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -289,14 +301,14 @@ border: 1px solid transparent;
     align-items: center;
    background: rgb(0, 0, 0);
    position: absolute;
-   top: 59%;
+   top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2000;
-   height: 80%;
+   height: 100%;
    width: 100%;
    z-index: 4000;
-   display: none;
+   
    
     
 }
@@ -325,4 +337,11 @@ border: 1px solid transparent;
  -moz-transition: border 3.0s linear, box-shadow 3.0s linear;
  transition: border 3.0s linear, box-shadow 3.0s linear;
 
+}
+.play-button:hover {
+    transform: scale(1.2);
+    transition: .8s;
+}
+.hidden {
+    display: none;
 }
