--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ html {
     font-size: 62.5%;
 }
 
-    /* font-family: 'Beau Rivage', cursive; */
+   
 
 header {
     
@@ -136,6 +136,9 @@ z-index: 1500;
     border: 2px black solid;
 
 }
+.tileStyle:hover {
+    cursor: pointer;
+}
 .dynamic-tile-style {
     position: absolute;
     top: 0;
@@ -223,10 +226,14 @@ z-index: 3000;
    
 }
 .dynamic-name-p1 {
-    color: aqua;
+    color: rgb(132, 255, 255);
+    text-shadow: aqua 0px 0px 20px;
+    -webkit-text-stroke: 2px rgb(0, 181, 181);
 }
 .dynamic-name-p2 {
-    color: red;
+    color: rgb(255, 128, 128);
+    text-shadow: red 0px 0px 20px;
+    -webkit-text-stroke: 1px rgb(203, 1, 1);
 }
 .random-tile {
     margin-top: auto;
@@ -265,9 +272,9 @@ footer p {
 @-webkit-keyframes glow-player-one  {
     to {
         
-        -webkit-box-shadow: 0 0 30px gold;
-        -moz-box-shadow: 0 0 30px gold;
-        box-shadow: 0 0 30px gold;
+        -webkit-box-shadow: 0 0 30px aqua;
+        -moz-box-shadow: 0 0 30px aqua;
+        box-shadow: 0 0 30px aqua;
     }
 }
 @-webkit-keyframes glow-player-two {
@@ -279,21 +286,21 @@ footer p {
     }
 }
 
-.player-one-glow {
+.player-one-active {
     
     border: 1px solid transparent;
-    -webkit-animation: glow-player-one 1.0s infinite alternate;
-    -webkit-transition: border 1.0s linear, box-shadow 1.0s linear;
-    -moz-transition: border 1.0s linear, box-shadow 1.0s linear;
-    transition: border 1.0s linear, box-shadow 1.0s linear;
+    -webkit-animation: glow-player-one 2.0s infinite alternate;
+    -webkit-transition:  box-shadow 2.0s linear;
+    -moz-transition:  box-shadow 2.0s linear;
+    transition:  box-shadow 2.0s linear;
     
 }
-.player-two-glow {
+.player-two-active {
 border: 1px solid transparent;
-    -webkit-animation: glow-player-two 1.0s infinite alternate;
-    -webkit-transition: border 1.0s linear, box-shadow 1.0s linear;
-    -moz-transition: border 1.0s linear, box-shadow 1.0s linear;
-    transition: border 1.0s linear, box-shadow 1.0s linear;
+    -webkit-animation: glow-player-two 2.0s infinite alternate;
+    -webkit-transition:  box-shadow 2.0s linear;
+    -moz-transition:  box-shadow 2.0s linear;
+    transition:  box-shadow 2.0s linear;
 }
 .start-game-modal {
     display: flex;
@@ -315,9 +322,9 @@ border: 1px solid transparent;
 @-webkit-keyframes play-button {
     to {
 
-        -webkit-box-shadow: 0 0 100px gold;
-        -moz-box-shadow: 0 0 100px gold;
-        box-shadow: 0 0 100px gold;
+     -webkit-box-shadow: 0 0 100px gold;
+     -moz-box-shadow: 0 0 100px gold;
+    box-shadow: 0 0 100px gold;
     }
 }
 .play-button {
@@ -339,8 +346,60 @@ border: 1px solid transparent;
 
 }
 .play-button:hover {
+    cursor: pointer;
     transform: scale(1.2);
     transition: .8s;
+}
+
+.event-cancel {
+    pointer-events: none;
+}
+.game-finished-modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.522);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2000;
+    height: 100%;
+    width: 100%;
+    z-index: 4000;
+}
+.dynamic-ending {
+    font-family: middleearth-Font;
+    font-size: 10.6rem;
+    color: rgb(233, 207, 170);
+    text-shadow: gold 0px 0px 20px;
+    -webkit-text-stroke: 2px gold
+}
+.reset {
+    
+    width: 170px;
+    height: 170px;
+    background: none;
+    border: none;
+    border-radius: 50%;
+    font-family: middleearth-Font;
+    border: 2px gold solid;
+    color: rgb(233, 207, 170);
+    text-shadow: gold 0px 0px 20px;
+    font-size: 4.4rem;
+    -webkit-text-stroke: 2px gold;
+    -webkit-animation: play-button 3.0s infinite alternate;
+    -webkit-transition: border 3.0s linear, box-shadow 3.0s linear;
+    -moz-transition: border 3.0s linear, box-shadow 3.0s linear;
+    transition: border 3.0s linear, box-shadow 3.0s linear;
+
+}
+.reset:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+    transition: .8s;
+
 }
 .hidden {
     display: none;
