--- a/styles.css
+++ b/styles.css
@@ -25,17 +25,16 @@ header {
   font-size: 8.6rem;
   margin: 1rem;
 }
-.in,
-.middle {
+.autumn {
   color: rgb(233, 207, 170);
   text-shadow: gold 0px 0px 20px;
   -webkit-text-stroke: 2px gold;
 }
 /* Winter Styles */
 .winter {
-  text-align: center;
+  /* text-align: center;
   font-family: middleearth-Font;
-  font-size: 8.6rem;
+  font-size: 8.6rem; */
   color: rgb(165, 220, 242);
   text-shadow: skyblue 0 0 20px;
   -webkit-text-stroke: 2px rgb(62, 141, 172);
@@ -139,8 +138,8 @@ header {
   position: absolute;
   top: 0;
   left: 0;
-  width: 190px;
-  height: 190px;
+  max-width: 190px;
+  height: auto;
   border-radius: 5px;
   outline: 2px black solid;
 }
