--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ header {
   position: relative;
   z-index: 100;
   border-radius: 5px;
-  background-image: url(./img/darker\ frame.jpg);
+  background-image: url(./img/sdfadsfdfg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
